--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,9 +1058,10 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "x =\n",
+    "x = 0\n",
     "for city in city_names:\n",
-    "    names_and_ranks = \n",
+    "    x+1\n",
+    "    names_and_ranks = x\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
