--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,8 +1060,8 @@
     "names_and_ranks = [] \n",
     "x = 0\n",
     "for city in city_names:\n",
-    "    x+1\n",
-    "    names_and_ranks = x\n",
+    "    x = x+1\n",
+    "    names_and_ranks = x + '. ' +\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
