Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
     "x = 0\n",
     "for city in city_names:\n",
     "    x = x+1\n",
-    "    names_and_ranks = x + '. ' +\n",
+    "    names_and_ranks = x + '. ' + city\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
