--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "x = 0\n",
-    "for city in city_names:\n",
+    "for city in city_names and indice in city_indices:\n",
     "    x = x+1\n",
     "    names_and_ranks.append(x + '. ' + city)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
