--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,8 +1060,7 @@
     "names_and_ranks = [] \n",
     "x = 0\n",
     "for city in city_names and indice in city_indices:\n",
-    "    x = x+1\n",
-    "    names_and_ranks.append(x + '. ' + city)\n",
+    "    names_and_ranks.append(ind + '. ' + city)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
