--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,9 +1070,8 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "x = 0\n",
     "for indice in city_indices:\n",
-    "    names_and_ranks.append(indice  '. ' + city)\n",
+    "    names_and_rank = \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
