Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for indice in city_indices:\n",
-    "    names_and_rank = \n",
+    "    names_and_rank = [indices + '']\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
