--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for indice in city_indices:\n",
-    "    names_and_rank = [f'{city_indices[indice] + '. ' + {city_names[indice]}'']\n",
+    "    names_and_rank = [f'{city_indices[indice] + \". \"\" + {city_names[indice]}'']\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
