--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [] \n",
     "for indice in city_indices:\n",
     "    names_and_rank = [f'{city_indices[indice]} + \". \" + {city_names[indice]}']\n",
-    "print(n)\n",
+    "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
