--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for indice in city_indices:\n",
-    "    names_and_rank = [f'{city_indices[indice]} + \". \" + {city_names[indice]}']\n",
+    "    names_and_rank.append([f'{city_indices[indice]} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
