--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,6 +1066,8 @@
    ],
    "source": [
     "for indice in city_indices:\n",
+    "    print(in)\n",
+    "    print(city_indices[indice])\n",
     "    names_and_rank.append([f'{city_indices[indice]} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
