--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,20 +1053,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n",
+      "7\n",
+      "7\n",
+      "8\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "10\n",
+      "10\n",
+      "11\n",
+      "11\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    print(in)\n",
+    "    print(indice)\n",
     "    print(city_indices[indice])\n",
     "    names_and_rank.append([f'{city_indices[indice]} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
