--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. \n",
       "1. \n",
       "2. \n",
       "3. \n",
@@ -1072,14 +1071,15 @@
       "9. \n",
       "10. \n",
       "11. \n",
+      "12. \n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    print(f'{city_indices[indice]}' + \". \" )\n",
-    "    names_and_rank.append([f'{city_indices[indice]} + \". \" + {city_names[indice]}'])\n",
+    "    print(f'{city_indices[indice]+1}' + \". \" )\n",
+    "    names_and_rank.append([f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
