--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. \n",
-      "2. \n",
-      "3. \n",
-      "4. \n",
-      "5. \n",
-      "6. \n",
-      "7. \n",
-      "8. \n",
-      "9. \n",
-      "10. \n",
-      "11. \n",
-      "12. \n",
+      "Buenos Aires. \n",
+      "Toronto. \n",
+      "Marakesh. \n",
+      "Albuquerque. \n",
+      "Los Cabos. \n",
+      "Greenville. \n",
+      "Archipelago Sea. \n",
+      "Pyeongchang. \n",
+      "Walla Walla Valley. \n",
+      "Salina Island. \n",
+      "Solta. \n",
+      "Iguazu Falls. \n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    print(f'{city_indices[indice]+1}' + \". \" )\n",
+    "    print(f'{city_names[indice]}' + \". \" )\n",
     "    names_and_rank.append([f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
