--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buenos Aires. \n",
-      "Toronto. \n",
-      "Marakesh. \n",
-      "Albuquerque. \n",
-      "Los Cabos. \n",
-      "Greenville. \n",
-      "Archipelago Sea. \n",
-      "Pyeongchang. \n",
-      "Walla Walla Valley. \n",
-      "Salina Island. \n",
-      "Solta. \n",
-      "Iguazu Falls. \n",
+      "Buenos Aires\n",
+      "Toronto\n",
+      "Marakesh\n",
+      "Albuquerque\n",
+      "Los Cabos\n",
+      "Greenville\n",
+      "Archipelago Sea\n",
+      "Pyeongchang\n",
+      "Walla Walla Valley\n",
+      "Salina Island\n",
+      "Solta\n",
+      "Iguazu Falls\n",
       "[]\n"
      ]
     }
    ],
    "source": [
     "for indice in city_indices:\n",
-    "    print(f'{city_names[indice]}' + \". \" )\n",
     "    names_and_rank.append([f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'])\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
