--- a/index.ipynb
+++ b/index.ipynb
@@ -1077,8 +1077,9 @@
     }
    ],
    "source": [
+    "names_and_ranks = \n",
     "for indice in city_indices:\n",
-    "    names_and_rank[indice]=[f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
+    "    names_and_rank[indice]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
