Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1053,19 +1053,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Buenos Aires\n",
+      "Toronto\n",
+      "Marakesh\n",
+      "Albuquerque\n",
+      "Los Cabos\n",
+      "Greenville\n",
+      "Archipelago Sea\n",
+      "Pyeongchang\n",
+      "Walla Walla Valley\n",
+      "Salina Island\n",
+      "Solta\n",
+      "Iguazu Falls\n",
       "[]\n"
      ]
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks = \n",
     "for indice in city_indices:\n",
     "    names_and_rank[indice]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
     "print(names_and_ranks)\n",
