Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,7 +1065,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks = [ran]\n",
     "for indice in city_indices:\n",
     "    names_and_rank[indice]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
     "print(names_and_ranks)\n",
