--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
     }
    ],
    "source": [
-    "names_and_ranks = []\n",
+    "names_and_ranks = []*le\n",
     "for indice in city_indices:\n",
     "    names_and_ranks[indice+1]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
     "print(names_and_ranks)\n",
