Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,7 +1065,8 @@
     }
    ],
    "source": [
-    "names_and_ranks = []*len(city_indices)\n",
+    "names_and_ranks = []\n",
+    "len(names_and_ranks) = len()\n",
     "print(len(names_and_ranks))\n",
     "#for indice in city_indices:\n",
     "#    names_and_ranks[indice+1]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
