Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,20 +1053,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-36-c94f67b39422>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-c94f67b39422>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    len(names_and_ranks) = len(city_indices)\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = []\n",
-    "len(names_and_ranks) = len()\n",
+    "len(names_and_ranks) = len(city_indices)\n",
     "print(len(names_and_ranks))\n",
     "#for indice in city_indices:\n",
     "#    names_and_ranks[indice+1]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
