Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,9 +1068,9 @@
    "source": [
     "names_and_ranks = []\n",
     "\n",
-    "#for indice in city_indices:\n",
-    "#    names_and_ranks[indice+1]=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
-    "#print(names_and_ranks)\n",
+    "for indice in city_indices:\n",
+    "    names_and_ranks.append=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
+    "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
