--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-36-c94f67b39422>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-c94f67b39422>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    len(names_and_ranks) = len(city_indices)\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1 + \". \" + Buenos Aires', '2 + \". \" + Toronto', '3 + \". \" + Marakesh', '4 + \". \" + Albuquerque', '5 + \". \" + Los Cabos', '6 + \". \" + Greenville', '7 + \". \" + Archipelago Sea', '8 + \". \" + Pyeongchang', '9 + \". \" + Walla Walla Valley', '10 + \". \" + Salina Island', '11 + \". \" + Solta', '12 + \". \" + Iguazu Falls']\n"
      ]
     }
    ],
@@ -1069,7 +1068,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for indice in city_indices:\n",
-    "    names_and_ranks.append=f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
+    "    names_and_ranks.append(f'{city_indices[indice] +1} + \". \" + {city_names[indice]}')\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
