--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1068,8 +1068,8 @@
     "names_and_ranks = []\n",
     "\n",
     "for indice in city_indices:\n",
-    "    a = \n",
-    "    names_and_ranks.append(f'{city_indices[indice] +1} + \". \" + {city_names[indice]}')\n",
+    "    a = f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
+    "    names_and_ranks.append(a)\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
