Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1 + \". \" + Buenos Aires', '2 + \". \" + Toronto', '3 + \". \" + Marakesh', '4 + \". \" + Albuquerque', '5 + \". \" + Los Cabos', '6 + \". \" + Greenville', '7 + \". \" + Archipelago Sea', '8 + \". \" + Pyeongchang', '9 + \". \" + Walla Walla Valley', '10 + \". \" + Salina Island', '11 + \". \" + Solta', '12 + \". \" + Iguazu Falls']\n"
+      "['1. Buenos Aires', '2. Toronto', '3. Marakesh', '4. Albuquerque', '5. Los Cabos', '6. Greenville', '7. Archipelago Sea', '8. Pyeongchang', '9. Walla Walla Valley', '10. Salina Island', '11. Solta', '12. Iguazu Falls']\n"
      ]
     }
    ],
@@ -1068,7 +1068,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for indice in city_indices:\n",
-    "    a = f'{city_indices[indice] +1} + \". \" + {city_names[indice]}'\n",
+    "    a = f'{city_indices[indice] +1}. {city_names[indice]}'\n",
     "    names_and_ranks.append(a)\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
