--- a/index.ipynb
+++ b/index.ipynb
@@ -1076,16 +1076,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12 + \". \" + Iguazu Falls'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
