--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,6 +1069,7 @@
     "\n",
     "for indice in city_indices:\n",
     "    a = f'{city_indices[indice] +1}. {city_names[indice]}'\n",
+    "    print(a)\n",
     "    names_and_ranks.append(a)\n",
     "print(names_and_ranks)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
