--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for cities in city"
+    "for cities in city_indices:\n",
+    "    "
    ]
   },
   {
