Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1102,7 +1102,7 @@
    "source": [
     "city_populations = []\n",
     "for cities in city_indices:\n",
-    "    city_opulations.append(city)"
+    "    city_opulations.append(cities[])"
    ]
   },
   {
