--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,8 +1110,8 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in city_indices:\n",
-    "    city_populations.append(str(cities[city]['Population'])"
+    "for city in city_indices\n",
+    "    city_populations.append(cities[city]['Population'])"
    ]
   },
   {
