--- a/index.ipynb
+++ b/index.ipynb
@@ -1114,7 +1114,8 @@
    "source": [
     "city_populations = []\n",
     "for city in city_indices:\n",
-    "    a=c\n",
+    "    a = cities[city]['Population']\n",
+    "    print(a)\n",
     "    city_populations.append(cities[city]['Population'])"
    ]
   },
