--- a/index.ipynb
+++ b/index.ipynb
@@ -1114,7 +1114,7 @@
    "source": [
     "city_populations = []\n",
     "for city in city_indices:\n",
-    "    a = [cities[city]['Population']\n",
+    "    a = cities[city]['Population']\n",
     "    print(a)\n",
     "#    city_populations.append(a)"
    ]
