--- a/index.ipynb
+++ b/index.ipynb
@@ -1114,8 +1114,7 @@
    "source": [
     "city_populations = []\n",
     "for city in city_indices:\n",
-    "    city = str(city)\n",
-    "    a = int(cities[city]['Population'])\n",
+    "    if key == ''\n",
     "    print(a)\n",
     "#    city_populations.append(a)"
    ]
