--- a/index.ipynb
+++ b/index.ipynb
@@ -1113,8 +1113,9 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in city_indices:\n",
-    "    if key == ''\n",
+    "for city in cities:\n",
+    "    if key == 'Population':\n",
+    "        city_op\n",
     "    print(a)\n",
     "#    city_populations.append(a)"
    ]
