Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1096,6 +1096,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [
