--- a/index.ipynb
+++ b/index.ipynb
@@ -2135,11 +2135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for indice in city_indices"
    ]
   },
   {
