Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2140,7 +2140,10 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for indice in city_indices"
+    "for indice in city_indices:\n",
+    "    for key, value in cities[indice].items():\n",
+    "        if key == 'Area':\n",
+    "            "
    ]
   },
   {
